--- a/estilo.css
+++ b/estilo.css
@@ -1,20 +1,29 @@
 h1 {
     font-size: 32px;
-    color:   cadetblue;
+    color:   rgb(2, 0, 14);
     text-align: center;
 }
 ul{
     font-size: 31px;
 }
 body{
-    background-color: rgba(171, 191, 194, 0.733);
+    background-color: rgba(248, 254, 255, 0.733);
 }
 main{
-    background-color: #c9c9c9;
+    background-color: #80857e;
     width: 632px;
     margin: auto;
 }
-
-    
+#btn{
+    font-family:arial;
+    font-size: 17px;
+    text-transform: uppercase;
+    font-weight: 700;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    background: rgb(126, 8, 8);
+    box-shadow: 0px 5px 5px rgb(54, 14, 14);
+}
 
     
